(chores) camel-bindy: code cleanup (#5968)
- Replace some reflection logic with reusable code from ReflectionHelper
- Logging cleanups